forced map postion relative to prevent carousel overlap and possible footer

--- a/src/components/googleMapsNpm/home.css
+++ b/src/components/googleMapsNpm/home.css
@@ -1,10 +1,11 @@
 .map {
     padding: 100px;
+    position: relative !important;
 }
 
 .App {
     /* position: absolute; */
-    
+
     /* estimated height of the map page */
     min-height: 1400px;
 }
